--- a/Citiesinfo.API/Views/Shared/_Layout.cshtml
+++ b/Citiesinfo.API/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
     <div class="container">
         @RenderBody()
     </div>
-    <!-- script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></ script -->
-    <script type="text/javascript" src="~/lib/jquery-1.11.1/dist/jquery.js"></script>
+    <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
+    <!-- script type="text/javascript" src="~/lib/jquery-1.11.1/dist/jquery.js"></script -->
     <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="~/lib/datatable/media/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="~/lib/datatable/media/js/dataTables.bootstrap.js"></script>
